--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "tiendav1",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "node-sass --include-path scss scss/tienda.scss css/tienda.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
-
   },
   "repository": {
     "type": "git",
@@ -22,5 +20,289 @@
   "devDependencies": {
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.18"
-  }
+  },
+  "dependencies": {
+    "abbrev": "^1.1.1",
+    "agent-base": "^6.0.2",
+    "agentkeepalive": "^4.2.1",
+    "ansi-styles": "^4.3.0",
+    "ansi-align": "^3.0.1",
+    "aggregate-error": "^3.1.0",
+    "anymatch": "^3.1.2",
+    "aproba": "^2.0.0",
+    "arrify": "^1.0.1",
+    "async-foreach": "^0.1.3",
+    "ansi-regex": "^5.0.1",
+    "assert-plus": "^1.0.0",
+    "balanced-match": "^1.0.2",
+    "are-we-there-yet": "^2.0.0",
+    "aws4": "^1.11.0",
+    "aws-sign2": "^0.7.0",
+    "bcrypt-pbkdf": "^1.0.2",
+    "binary-extensions": "^2.2.0",
+    "boxen": "^5.1.2",
+    "braces": "^3.0.2",
+    "brace-expansion": "^1.1.11",
+    "cacache": "^15.3.0",
+    "cacheable-request": "^6.1.0",
+    "camelcase": "^5.3.1",
+    "camelcase-keys": "^6.2.2",
+    "chokidar": "^3.5.3",
+    "chalk": "^4.1.2",
+    "chownr": "^2.0.0",
+    "ajv": "^6.12.6",
+    "ci-info": "^2.0.0",
+    "clean-stack": "^2.2.0",
+    "cli-boxes": "^2.2.1",
+    "cliui": "^7.0.4",
+    "color-convert": "^2.0.1",
+    "clone-response": "^1.0.2",
+    "color-name": "^1.1.4",
+    "asn1": "^0.2.6",
+    "concat-map": "^0.0.1",
+    "configstore": "^5.0.1",
+    "caseless": "^0.12.0",
+    "core-util-is": "^1.0.2",
+    "asynckit": "^0.4.0",
+    "dashdash": "^1.14.1",
+    "crypto-random-string": "^2.0.0",
+    "combined-stream": "^1.0.8",
+    "debug": "^4.3.4",
+    "decamelize": "^1.2.0",
+    "decamelize-keys": "^1.1.0",
+    "decompress-response": "^3.3.0",
+    "deep-extend": "^0.6.0",
+    "defer-to-connect": "^1.1.3",
+    "depd": "^1.1.2",
+    "dot-prop": "^5.3.0",
+    "duplexer3": "^0.1.4",
+    "color-support": "^1.1.3",
+    "delegates": "^1.0.0",
+    "delayed-stream": "^1.0.0",
+    "console-control-strings": "^1.1.0",
+    "encoding": "^0.1.13",
+    "end-of-stream": "^1.4.4",
+    "env-paths": "^2.2.1",
+    "err-code": "^2.0.3",
+    "error-ex": "^1.3.2",
+    "escalade": "^3.1.1",
+    "escape-goat": "^2.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "cross-spawn": "^7.0.3",
+    "extend": "^3.0.2",
+    "extsprintf": "^1.3.0",
+    "ecc-jsbn": "^0.1.2",
+    "find-up": "^4.1.0",
+    "fill-range": "^7.0.1",
+    "fs-minipass": "^2.1.0",
+    "fs.realpath": "^1.0.0",
+    "forever-agent": "^0.6.1",
+    "fast-json-stable-stringify": "^2.1.0",
+    "function-bind": "^1.1.1",
+    "gaze": "^1.1.3",
+    "get-caller-file": "^2.0.5",
+    "get-stdin": "^4.0.1",
+    "getpass": "^0.1.7",
+    "emoji-regex": "^8.0.0",
+    "get-stream": "^4.1.0",
+    "glob": "^7.2.3",
+    "glob-parent": "^5.1.2",
+    "globule": "^1.3.4",
+    "global-dirs": "^3.0.0",
+    "got": "^9.6.0",
+    "graceful-fs": "^4.2.10",
+    "has": "^1.0.3",
+    "hard-rejection": "^2.1.0",
+    "has-flag": "^4.0.0",
+    "fast-deep-equal": "^3.1.3",
+    "har-schema": "^2.0.0",
+    "has-yarn": "^2.1.0",
+    "hosted-git-info": "^4.1.0",
+    "has-unicode": "^2.0.1",
+    "http-cache-semantics": "^4.1.0",
+    "http-proxy-agent": "^4.0.1",
+    "https-proxy-agent": "^5.0.1",
+    "humanize-ms": "^1.2.1",
+    "iconv-lite": "^0.6.3",
+    "gauge": "^3.0.2",
+    "ignore-by-default": "^1.0.1",
+    "import-lazy": "^2.1.0",
+    "indent-string": "^4.0.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "infer-owner": "^1.0.4",
+    "ini": "^2.0.0",
+    "inherits": "^2.0.4",
+    "ip": "^1.1.8",
+    "is-arrayish": "^0.2.1",
+    "is-binary-path": "^2.1.0",
+    "is-ci": "^2.0.0",
+    "is-core-module": "^2.9.0",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-installed-globally": "^0.4.0",
+    "http-signature": "^1.2.0",
+    "is-lambda": "^1.0.1",
+    "is-npm": "^5.0.0",
+    "is-number": "^7.0.0",
+    "is-obj": "^2.0.0",
+    "is-path-inside": "^3.0.3",
+    "is-plain-obj": "^1.1.0",
+    "is-typedarray": "^1.0.0",
+    "is-yarn-global": "^0.3.0",
+    "isarray": "^1.0.0",
+    "form-data": "^2.3.3",
+    "is-fullwidth-code-point": "^3.0.0",
+    "isstream": "^0.1.2",
+    "js-base64": "^2.6.4",
+    "js-tokens": "^4.0.0",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-buffer": "^3.0.0",
+    "jsbn": "^0.1.1",
+    "isexe": "^2.0.0",
+    "keyv": "^3.1.0",
+    "json-schema": "^0.4.0",
+    "kind-of": "^6.0.3",
+    "latest-version": "^5.1.0",
+    "jsprim": "^1.4.2",
+    "lines-and-columns": "^1.2.4",
+    "locate-path": "^5.0.0",
+    "lodash": "^4.17.21",
+    "lowercase-keys": "^1.0.1",
+    "lru-cache": "^6.0.0",
+    "make-dir": "^3.1.0",
+    "make-fetch-happen": "^9.1.0",
+    "map-obj": "^4.3.0",
+    "meow": "^9.0.0",
+    "mimic-response": "^1.0.1",
+    "har-validator": "^5.1.5",
+    "min-indent": "^1.0.1",
+    "mime-db": "^1.52.0",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.6",
+    "minimist-options": "^4.1.0",
+    "minipass": "^3.3.4",
+    "minipass-collect": "^1.0.2",
+    "minipass-fetch": "^1.4.1",
+    "minipass-flush": "^1.0.5",
+    "minipass-pipeline": "^1.2.4",
+    "minipass-sized": "^1.0.3",
+    "minizlib": "^2.1.2",
+    "mkdirp": "^1.0.4",
+    "ms": "^2.1.2",
+    "nan": "^2.16.0",
+    "negotiator": "^0.6.3",
+    "node-gyp": "^8.4.1",
+    "nopt": "^5.0.0",
+    "normalize-package-data": "^3.0.3",
+    "normalize-url": "^4.5.1",
+    "json-stringify-safe": "^5.0.1",
+    "once": "^1.4.0",
+    "normalize-path": "^3.0.0",
+    "oauth-sign": "^0.9.0",
+    "json-schema-traverse": "^0.4.1",
+    "p-cancelable": "^1.1.0",
+    "p-limit": "^2.3.0",
+    "p-map": "^4.0.0",
+    "p-try": "^2.2.0",
+    "p-locate": "^4.1.0",
+    "package-json": "^6.5.0",
+    "parse-json": "^5.2.0",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-parse": "^1.0.7",
+    "npmlog": "^5.0.1",
+    "picomatch": "^2.3.1",
+    "mime-types": "^2.1.35",
+    "prepend-http": "^2.0.0",
+    "process-nextick-args": "^2.0.1",
+    "promise-inflight": "^1.0.1",
+    "promise-retry": "^2.0.1",
+    "pstree.remy": "^1.1.8",
+    "pump": "^3.0.0",
+    "performance-now": "^2.1.0",
+    "punycode": "^2.1.1",
+    "pupa": "^2.1.1",
+    "quick-lru": "^4.0.1",
+    "rc": "^1.2.8",
+    "psl": "^1.8.0",
+    "read-pkg": "^5.2.0",
+    "read-pkg-up": "^7.0.1",
+    "readdirp": "^3.6.0",
+    "path-key": "^3.1.1",
+    "redent": "^3.0.0",
+    "registry-auth-token": "^4.2.2",
+    "require-directory": "^2.1.1",
+    "registry-url": "^5.1.0",
+    "object-assign": "^4.1.1",
+    "responselike": "^1.0.2",
+    "retry": "^0.12.0",
+    "qs": "^6.5.3",
+    "rimraf": "^3.0.2",
+    "sass-graph": "^4.0.0",
+    "scss-tokenizer": "^0.3.0",
+    "request": "^2.88.2",
+    "safe-buffer": "^5.2.1",
+    "semver": "^7.3.7",
+    "safer-buffer": "^2.1.2",
+    "set-blocking": "^2.0.0",
+    "semver-diff": "^3.1.1",
+    "signal-exit": "^3.0.7",
+    "shebang-command": "^2.0.0",
+    "smart-buffer": "^4.2.0",
+    "shebang-regex": "^3.0.0",
+    "socks-proxy-agent": "^6.2.1",
+    "socks": "^2.6.2",
+    "source-map": "^0.7.4",
+    "spdx-exceptions": "^2.3.0",
+    "spdx-correct": "^3.1.1",
+    "spdx-license-ids": "^3.0.11",
+    "spdx-expression-parse": "^3.0.1",
+    "stdout-stream": "^1.4.1",
+    "ssri": "^8.0.1",
+    "string_decoder": "^1.3.0",
+    "resolve": "^1.22.1",
+    "strip-indent": "^3.0.0",
+    "sshpk": "^1.17.0",
+    "strip-json-comments": "^2.0.1",
+    "supports-color": "^7.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "tar": "^6.1.11",
+    "to-readable-stream": "^1.0.0",
+    "to-regex-range": "^5.0.1",
+    "touch": "^3.1.0",
+    "tough-cookie": "^2.5.0",
+    "string-width": "^4.2.3",
+    "trim-newlines": "^3.0.1",
+    "type-fest": "^0.18.1",
+    "true-case-path": "^1.0.3",
+    "tunnel-agent": "^0.6.0",
+    "undefsafe": "^2.0.5",
+    "typedarray-to-buffer": "^3.1.5",
+    "unique-slug": "^2.0.2",
+    "unique-filename": "^1.1.1",
+    "unique-string": "^2.0.0",
+    "update-notifier": "^5.1.0",
+    "url-parse-lax": "^3.0.0",
+    "strip-ansi": "^6.0.1",
+    "util-deprecate": "^1.0.2",
+    "validate-npm-package-license": "^3.0.4",
+    "readable-stream": "^3.6.0",
+    "verror": "^1.10.0",
+    "widest-line": "^3.1.0",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^3.0.3",
+    "tweetnacl": "^0.14.5",
+    "xdg-basedir": "^4.0.0",
+    "wide-align": "^1.1.5",
+    "y18n": "^5.0.8",
+    "yallist": "^4.0.0",
+    "yargs": "^17.5.1",
+    "yargs-parser": "^20.2.9",
+    "uuid": "^3.4.0",
+    "which": "^2.0.2",
+    "uri-js": "^4.4.1"
+  },
+  "description": ""
 }
